[package]
name = "oblique-strategies"
version = "0.1.0"
edition = "2021"
description = "Oblique strategies CLI"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.release]
strip = true
panic = "abort"
